--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,6 @@ logo: /images/isomer-logo.svg
 links:
   - title: Contact Us
     url: /contact-us/
-  - title: Example Page
-    url: /example-page/
+  - title: Menu Title
+    url: /Bukit Canberra
+    sublinks: []
