--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@ logo: /images/isomer-logo.svg
 links:
   - title: Contact Us
     url: /contact-us/
-  - title: Menu Title
+  - title: Events
     url: /Bukit Canberra
     sublinks: []
