--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,4 @@
 logo: /images/isomer-logo.svg
 links:
   - title: Events
-    url: /Bukit Canberra
-    sublinks: []
+    collection: bukit-canberra
