--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Chingay50 Parading Through Time.md
       - Michael Koh & Sharon Lee.md
       - Let's Build A Float.md
       - Find Love at Chingay.md
