--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,9 @@ logo: /images/isomer-logo.svg
 links:
   - title: Bukit Canberra
     collection: bukit-canberra
+  - title: About Us
+    url: /permalink
+  - title: Volunteer Programme
+    url: /permalink
+  - title: Success Stories
+    url: /permalink
