--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,12 @@ links:
     url: /permalink
   - title: Bukit Canberra
     collection: bukit-canberra
+  - title: About Us
+    url: /permalink
+    sublinks:
+      - title: Vision
+        url: /permalink
+      - title: Mission
+        url: /permalink
+      - title: 2:168
+        url: /permalink
