--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,9 +9,7 @@ links:
         url: /permalink
       - title: 2:168
         url: /permalink
-  - title: Volunteer Programme
+  - title: Programme Sample 1
     url: /permalink
-  - title: Success Stories
+  - title: Programme Sample 2
     url: /permalink
-  - title: Bukit Canberra
-    collection: bukit-canberra
