--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,6 @@ links:
       - title: 2:168
         url: /permalink
   - title: Programme Sample 1
-    url: /permalink
+    url: /bukit-canberra/event-list
   - title: Programme Sample 2
     url: /permalink
