--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,4 +12,4 @@ links:
   - title: Programme Sample 1
     url: /bukit-canberra/event-list
   - title: Programme Sample 2
-    url: /permalink
+    url: /bukit-canberra-sample/categories
