--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ links:
       - title: Mission
         url: /mission
       - title: 2:168
-        url: /permalink
+        url: /2-168
   - title: Programme Sample 1
     url: /bukit-canberra/event-list
   - title: Programme Sample 2
