--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Event List.md
-      - Find Love at Chingay.md
+      - Project Blue Wave.md
       - Let's Build A Float.md
       - Michael Koh & Sharon Lee.md
       - Chingay50 Parading Through Time.md
