--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 logo: /images/isomer-logo.svg
 links:
   - title: About Us
+    collection: about-us
+  - title: About Us
     url: /vision
     sublinks:
       - title: Vision
