--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,7 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
-      - Event List.md
+      - Programmes.md
       - Project Blue Wave.md
       - Let's Build A Float.md
       - Michael Koh & Sharon Lee.md
