--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Beach Cleaning & Environment Group.md
       - Community Tuition Programme.md
       - It's Storytime.md
       - M3 Homework Cafe.md
