--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Activities organised by Canberra Secondary School's students.md
       - Students teach or guide seniors on usage of technology.md
       - Community Health Directory ​.md
       - Tchoukball.md
