--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Food from the Heart distribution programme ​.md
       - Senior Befriender Programme.md
       - Volunteers conduct home visits once a month.md
       - Activities organised by Canberra Secondary School's students.md
