--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Medical Escort.md
       - Programme Coordinator ​.md
       - Hair Grooming or  cutting services.md
       - Befriending through online meeting platform for residents ​.md
