--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,8 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Monthly birthday celebration for residents via online meeting platforms
+        ​.md
       - Donation in kind.md
       - Medical Escort.md
       - Programme Coordinator ​.md
