--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Sowers’ Community Initiative.md
       - Student Care Centre.md
       - Outreach & Public Education.md
       - Language classes for foreign care staff.md
