--- a/_bukit-canberra/collection.yml
+++ b/_bukit-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra:
     output: true
     order:
+      - Various Volunteering Initiatives (by NKF)​.md
       - Sowers’ Community Initiative.md
       - Student Care Centre.md
       - Outreach & Public Education.md
