--- a/_bukit-canberra-sample/collection.yml
+++ b/_bukit-canberra-sample/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - Categories.md
-      - Protecting our Environment.md
+      - Population Health.md
