--- a/_bukit-canberra-sample/collection.yml
+++ b/_bukit-canberra-sample/collection.yml
@@ -2,5 +2,6 @@ collections:
   bukit-canberra-sample:
     output: true
     order:
+      - Improving Children Literacy.md
       - Categories.md
       - Population Health.md
