--- a/_bukit-canberra-sample/collection.yml
+++ b/_bukit-canberra-sample/collection.yml
@@ -2,6 +2,7 @@ collections:
   bukit-canberra-sample:
     output: true
     order:
+      - Greening our Estate or Community Farming.md
       - Protecting our Environment.md
       - Improving Children Literacy.md
       - Categories.md
