--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - Marketing Video.md
       - SPARKS Mission.md
       - SPARKS Vision.md
       - Our Success Stories.md
