--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ links:
     collection: join-us
   - title: Our Facilities
     collection: our-facilities
+  - title: Our Location
+    url: /Our-Location
