--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,5 +2,6 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Programme 2.md
       - Volunteer Programmes.md
       - M3 Homework Cafe.md
