--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - It's Story Time.md
       - Testing.md
       - Programme 2.md
       - Volunteer Programmes.md
