--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Project Blue Wave.md
       - Food from the Heart.md
       - It's Story Time.md
       - Testing.md
