--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Project Blue Wave.md
       - Food from the Heart.md
       - It's Story Time.md
-      - Testing.md
+      - Community Tuition.md
       - Programme 2.md
       - Volunteer Programmes.md
       - M3 Homework Cafe.md
