--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Protecting our Environment/Project Blue Wave.md
       - Protecting our Environment/.keep
       - Garden Gives Back.md
       - Food from the Heart.md
