--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,9 +2,8 @@ collections:
   volunteer-programmes:
     output: true
     order:
-      - Protecting our Environment/Project Blue Wave.md
-      - Protecting our Environment/.keep
       - Garden Gives Back.md
+      - Project Blue Wave.md
       - Food from the Heart.md
       - It's Story Time.md
       - Community Tuition.md
