--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Join Us.md
       - Volunteer Programmes.md
       - Garden Gives Back.md
       - Project Blue Wave.md
