--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -10,5 +10,5 @@ collections:
       - Beach Cleaning & Environment Group.md
       - Project Blue Wave.md
       - Garden Gives Back.md
-      - Food from the Heart.md
+      - Food from the Heart (SC).md
       - Join Us.md
