--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -7,7 +7,8 @@ collections:
       - It's Story Time.md
       - Community Tuition.md
       - Beach Cleaning & Environment Group.md
-      - Project Blue Wave.md
+      - Protecting our Environment/Project Blue Wave.md
+      - Protecting our Environment/.keep
       - Garden Gives Back.md
       - Sembawang Heritage Ambassador.md
       - Canberra Befrienders for the Elderly.md
