--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -6,6 +6,7 @@ collections:
       - M3 Homework Cafe.md
       - It's Story Time.md
       - Community Tuition.md
+      - Protecting our Environment/Beach Cleaning & Environment Group.md
       - Protecting our Environment/.keep
       - Protecting our Environment/Project Blue Wave.md
       - Garden Gives Back.md
