--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Greening our Estate/.keep
       - Improving Children Literacy/M3 Homework Cafe.md
       - Improving Children Literacy/Community Tuition.md
       - Improving Children Literacy/It's Story Time.md
