--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Elderly Programme/Canberra Befrienders for the Elderly.md
       - Elderly Programme/.keep
       - Volunteer Programmes.md
       - Improving Children Literacy/.keep
