--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Reaching Out to the Needy/Food from the Heart (SC).md
       - Reaching Out to the Needy/Food from the Heart (FYFS).md
       - Reaching Out to the Needy/.keep
       - Volunteer Programmes.md
