--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Creating Inclusive Community/.keep
       - Volunteer Programmes.md
       - Improving Children Literacy/.keep
       - Improving Children Literacy/M3 Homework Cafe.md
