--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Creating Inclusive Community/Medical Escort.md
       - Creating Inclusive Community/Programme Coordinator.md
       - Creating Inclusive Community/Hair Grooming or Cutting Services.md
       - Creating Inclusive Community/Be a Befriender (THK).md
