--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Social Enterprise/Sewers' Community Initiative.md
       - Social Enterprise/Volunteering Initiatives@NKF.md
       - Social Enterprise/.keep
       - Volunteer Programmes.md
