--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Volunteer Programmes.md
       - Improving Children Literacy/.keep
       - Improving Children Literacy/M3 Homework Cafe.md
-      - Improving Children Literacy/Community Tuition.md
+      - Improving Children Literacy/Community Tuition Programme.md
       - Improving Children Literacy/It's Story Time.md
       - Protecting our Environment/.keep
       - Protecting our Environment/Beach Cleaning & Environment Group.md
