--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -18,6 +18,7 @@ collections:
       - Reaching Out to the Needy/.keep
       - Reaching Out to the Needy/Food from the Heart (FYFS).md
       - Reaching Out to the Needy/Food from the Heart (SC).md
+      - Creating Inclusive Community/Virtual Zumba or Exercise Instructors.md
       - Creating Inclusive Community/.keep
       - Creating Inclusive Community/Be a Befriender (THK).md
       - Creating Inclusive Community/Hair Grooming or Cutting Services.md
