--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -3,10 +3,10 @@ collections:
     output: true
     order:
       - Volunteer Programmes.md
-      - Improving Children Literacy/.keep
-      - Improving Children Literacy/M3 Homework Cafe.md
-      - Improving Children Literacy/Community Tuition.md
-      - Improving Children Literacy/It's Story Time.md
+      - Nurturing Our Children/.keep
+      - Nurturing Our Children/M3 Homework Cafe.md
+      - Nurturing Our Children/Community Tuition.md
+      - Nurturing Our Children/It's Story Time.md
       - Protecting our Environment/.keep
       - Protecting our Environment/Beach Cleaning & Environment Group.md
       - Greening our Estate/.keep
