--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -11,8 +11,8 @@ collections:
       - Protecting our Environment/Beach Cleaning & Environment Group.md
       - Greening our Estate/.keep
       - Greening our Estate/Garden Gives Back.md
-      - Preserving Our Heritage/.keep
-      - Preserving Our Heritage/Sembawang Heritage Ambassador.md
+      - Arts & Heritage/.keep
+      - Arts & Heritage/Sembawang Heritage Ambassador.md
       - Elderly Programme/.keep
       - Elderly Programme/Canberra Befrienders for the Elderly.md
       - Reaching Out to the Needy/.keep
