--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Greening our Estate/.keep
       - Greening our Estate/Garden Gives Back.md
       - Arts & Heritage/.keep
-      - Arts & Heritage/Sembawang Heritage Ambassador.md
+      - Arts & Heritage/Sembawang Heritage Ambassadors.md
       - Elderly Programme/.keep
       - Elderly Programme/Canberra Befrienders for the Elderly.md
       - Reaching Out to the Needy/.keep
