--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -30,7 +30,7 @@ collections:
       - Social Enterprise/.keep
       - Social Enterprise/Sewers' Community Initiative.md
       - Social Enterprise/Volunteering Initiatives@NKF.md
-      - Arts and Crafts Instructors.md
+      - Virtual Art & Craft.md
       - Storytellers.md
       - Art Performance  Volunteers.md
       - Activity Pack Designers.md
