--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -9,8 +9,8 @@ collections:
       - Nurturing Our Children/It's Story Time.md
       - Protecting our Environment/.keep
       - Protecting our Environment/Beach Cleaning & Environment Group.md
-      - Greening our Estate/.keep
-      - Greening our Estate/Garden Gives Back.md
+      - Going Green Together/.keep
+      - Going Green Together/Garden Gives Back.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
       - Elderly Programme/.keep
