--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Nurturing Our Children/Community Tuition.md
       - Nurturing Our Children/It's Story Time.md
       - Protecting our Environment/.keep
+      - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/.keep
       - Going Green Together/Garden Gives Back.md
       - Arts & Heritage/.keep
