--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -11,6 +11,7 @@ collections:
       - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/.keep
       - Going Green Together/Garden Gives Back.md
+      - Arts & Heritage/Art Performance  Volunteers.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
       - Elderly Programme/.keep
