--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   volunteer-programmes:
     output: true
     order:
+      - Smart Nation/.keep
       - Health & Wellness/.keep
       - Caring for Our Community/.keep
       - Volunteer Programmes.md
