--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -13,6 +13,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/Garden Gives Back.md
+      - Caring for Our Community/Canberra Befrienders for the Elderly.md
       - Caring for Our Community/.keep
       - Health & Wellness/.keep
       - Smart Nation/.keep
