--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/Garden Gives Back.md
+      - Caring for Our Community/Volunteering Initiatives@NKF.md
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Canberra Befrienders for the Elderly.md
       - Caring for Our Community/.keep
