--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/Garden Gives Back.md
+      - Caring for Our Community/Monthly Birthday Celebrations.md
       - Caring for Our Community/Outreach & Public Education.md
       - Caring for Our Community/Hair Grooming or Cutting Services.md
       - Caring for Our Community/Volunteering Initiatives@NKF.md
