--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -23,6 +23,7 @@ collections:
       - Caring for Our Community/Canberra Befrienders for the Elderly.md
       - Caring for Our Community/.keep
       - Health & Wellness/.keep
+      - Smart Nation/Teach a Language.md
       - Smart Nation/.keep
       - Reaching Out to the Needy/.keep
       - Creating Inclusive Community/.keep
