--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -24,6 +24,7 @@ collections:
       - Caring for Our Community/.keep
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
       - Health & Wellness/.keep
+      - Smart Nation/Programme Coordinator.md
       - Smart Nation/Teach a Language.md
       - Smart Nation/.keep
       - Reaching Out to the Needy/.keep
