--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -22,6 +22,7 @@ collections:
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Canberra Befrienders for the Elderly.md
       - Caring for Our Community/.keep
+      - Health & Wellness/Medical Escort.md
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
       - Health & Wellness/.keep
       - Smart Nation/Programme Coordinator.md
