--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -23,6 +23,7 @@ collections:
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
+      - Smart Nation/Be a Befriender (THK).md
       - Smart Nation/.keep
       - Smart Nation/Programme Coordinator.md
       - Smart Nation/Teach a Language.md
