--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -21,6 +21,7 @@ collections:
       - Caring for Our Community/Volunteering Initiatives@NKF.md
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Canberra Befrienders for the Elderly.md
+      - Health & Wellness/Morning Exercise Facilitators.md
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
