--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Nurturing Our Children/M3 Homework Cafe.md
       - Nurturing Our Children/Community Tuition.md
       - Nurturing Our Children/It's Story Time.md
+      - Arts & Heritage/Virtual Art & Craft.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Art Performance  Volunteers.md
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
