--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment.md
       - Going Green Together/Garden Gives Back.md
+      - Caring for Our Community/Befriender Programme.md
       - Caring for Our Community/Food from the Heart (SC).md
       - Caring for Our Community/Food from the Heart (FYFS).md
       - Caring for Our Community/.keep
