--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -26,6 +26,7 @@ collections:
       - Caring for Our Community/Volunteering Initiatives@NKF.md
       - Caring for Our Community/Storytellers.md
       - Caring for Our Community/Hawker Day.md
+      - Health & Wellness/Activity Pack Designers.md
       - Health & Wellness/Morning Exercise Facilitators.md
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
