--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -19,7 +19,7 @@ collections:
       - Caring for Our Community/Food from the Heart (SC).md
       - Caring for Our Community/Befriender Programme.md
       - Caring for Our Community/Hair Grooming or Cutting Services.md
-      - Caring for Our Community/Monthly Birthday Celebrations.md
+      - Caring for Our Community/Virtual Monthly Birthday Celebrations.md
       - Caring for Our Community/Outreach & Public Education.md
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Food from the Heart (FYFS).md
