--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -23,7 +23,7 @@ collections:
       - Caring for Our Community/Outreach & Public Education.md
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Food from the Heart (FYFS).md
-      - Caring for Our Community/Volunteering Initiatives@NKF.md
+      - Caring for Our Community/NKF Volunteers.md
       - Caring for Our Community/Storytellers.md
       - Caring for Our Community/Hawker Day.md
       - Health & Wellness/.keep
