--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -24,7 +24,7 @@ collections:
       - Caring for Our Community/Sewers' Community Initiative.md
       - Caring for Our Community/Food from the Heart (FYFS).md
       - Caring for Our Community/NKF Volunteers.md
-      - Caring for Our Community/Storytellers.md
+      - Caring for Our Community/Volunteer Storytellers.md
       - Caring for Our Community/Hawker Day.md
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
