--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Nurturing Our Children/.keep
       - Nurturing Our Children/M3 Homework Cafe.md
       - Nurturing Our Children/Community Tuition.md
-      - Nurturing Our Children/It's Story Time.md
+      - Nurturing Our Children/It's Storytime.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
       - Arts & Heritage/Virtual Art & Craft.md
