--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -32,7 +32,7 @@ collections:
       - Health & Wellness/Senior Activity Pack Designers.md
       - Health & Wellness/Morning Exercise Facilitators.md
       - Smart Nation/.keep
-      - Smart Nation/Be a Befriender (THK).md
+      - Smart Nation/Online Befriender Programme.md
       - Smart Nation/Programme Coordinator.md
       - Smart Nation/Teach a Language.md
       - Smart Nation/Intergeneration Programme Coordinator.md
