--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -34,6 +34,6 @@ collections:
       - Smart Nation/.keep
       - Smart Nation/Online Befriender Programme.md
       - Smart Nation/Programme Coordinator.md
-      - Smart Nation/Teach a Language.md
+      - Smart Nation/Teach a Local Language to Foreign Care Staff.md
       - Smart Nation/Intergeneration Programme Coordinator.md
       - Join Us.md
