--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -29,7 +29,7 @@ collections:
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
-      - Health & Wellness/Activity Pack Designers.md
+      - Health & Wellness/Senior Activity Pack Designers.md
       - Health & Wellness/Morning Exercise Facilitators.md
       - Smart Nation/.keep
       - Smart Nation/Online Befriender Programme.md
