--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Volunteer Programmes.md
       - Nurturing Our Children/.keep
       - Nurturing Our Children/M3 Homework Cafe.md
-      - Nurturing Our Children/Community Tuition.md
+      - Nurturing Our Children/Community Tuition Programme.md
       - Nurturing Our Children/It's Storytime.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
