--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -16,7 +16,7 @@ collections:
       - Going Green Together/Garden Gives Back.md
       - Caring for Our Community/.keep
       - Caring for Our Community/Canberra Befrienders for the Elderly.md
-      - Caring for Our Community/Food from the Heart (SC).md
+      - Caring for Our Community/Food from the Heart.md
       - Caring for Our Community/Befriender Programme.md
       - Caring for Our Community/Hair Grooming or Cutting Services.md
       - Caring for Our Community/Virtual Monthly Birthday Celebration.md
