--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -34,5 +34,5 @@ collections:
       - Smart Nation/.keep
       - Smart Nation/Online Befriender Programme.md
       - Smart Nation/Virtual Programme Coordinator.md
-      - Smart Nation/Teach a Local Language to Foreign Care Staff.md
+      - Smart Nation/Language Class for Foreign Care Staff.md
       - Smart Nation/Intergeneration Programme Coordinator.md
