--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Nurturing Our Children/It's Storytime.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
-      - Arts & Heritage/Virtual Art & Craft.md
+      - Arts & Heritage/Virtual Arts & Crafts Workshop Instructors.md
       - Arts & Heritage/Art Performance  Volunteers.md
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment.md
