--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Arts & Heritage/Virtual Arts & Crafts Workshop Instructors.md
       - Arts & Heritage/Art Performance  Volunteers.md
       - Going Green Together/.keep
-      - Going Green Together/Beach Cleaning & Environment.md
+      - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Garden Gives Back.md
       - Caring for Our Community/.keep
       - Caring for Our Community/Befrienders for the Elderly.md
