--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -13,7 +13,7 @@ collections:
       - Arts & Heritage/Art Performance  Volunteers.md
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
-      - Going Green Together/Garden Gives Back.md
+      - Going Green Together/Gardens Give Back.md
       - Caring for Our Community/.keep
       - Caring for Our Community/Befrienders for the Elderly.md
       - Caring for Our Community/Food from the Heart.md
