--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -22,7 +22,7 @@ collections:
       - Caring for Our Community/Monthly Birthday Celebration for Residents.md
       - Caring for Our Community/Outreach & Public Education.md
       - Caring for Our Community/Sewers' Community Initiative.md
-      - Caring for Our Community/Food from the Heart (FYFS).md
+      - Caring for Our Community/Food from the Heart Distribution Programme.md
       - Caring for Our Community/NKF Volunteers.md
       - Caring for Our Community/Volunteer Storytellers.md
       - Caring for Our Community/Hawker Day.md
