--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ links:
   - title: Join Us
     url: /join-us/Join-Us
   - title: Our Facilities
-    collection: our-facilities
+    url: /our-facilities/Facilities
   - title: Our Location
     url: /Our-Location
