--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@ links:
   - title: Volunteer Programmes
     collection: volunteer-programmes
   - title: Join Us
-    url: /join-us/Join-Us
+    url: /Join-Us
   - title: Our Facilities
-    url: /our-facilities/Facilities
+    url: /our-facilities
   - title: Our Location
     url: /Our-Location
