--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
       - Arts & Heritage/Virtual Art & Crafts Workshop Instructors.md
-      - Arts & Heritage/Art Performance  Volunteers.md
+      - Arts & Heritage/Arts Performance Volunteers.md
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Gardens Give Back.md
