--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -20,7 +20,7 @@ collections:
       - Caring for Our Community/Hair Grooming or Cutting Services.md
       - Caring for Our Community/Monthly Birthday Celebration for Residents.md
       - Caring for Our Community/Outreach & Public Education.md
-      - Caring for Our Community/Sewers' Community Initiative.md
+      - Caring for Our Community/Sewing Community Initiative.md
       - Caring for Our Community/Food from the Heart Distribution Programme.md
       - Caring for Our Community/NKF Volunteers.md
       - Caring for Our Community/Volunteer Storytellers.md
