--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -24,7 +24,7 @@ collections:
       - Caring for Our Community/Food from the Heart Distribution Programme.md
       - Caring for Our Community/NKF Volunteers.md
       - Caring for Our Community/Volunteer Storytellers.md
-      - Caring for Our Community/Hawker Day.md
+      - Caring for Our Community/Hawkers Day.md
       - Health & Wellness/.keep
       - Health & Wellness/Medical Escort.md
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
