--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -34,4 +34,4 @@ collections:
       - Smart Nation/Online Befriender Programme.md
       - Smart Nation/Intergeneration Programme Coordinator.md
       - Smart Nation/Virtual Programme Coordinator.md
-      - Smart Nation/Language Class for Foreign Care Staff.md
+      - Smart Nation/Language Classes for Foreign Care Staff.md
