--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Nurturing Our Children/It's Storytime.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
-      - Arts & Heritage/Virtual Art & Crafts Workshop Instructors.md
+      - Arts & Heritage/Virtual Art & Craft Instructors.md
       - Arts & Heritage/Arts Performance Volunteers.md
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
