--- a/_config.yml
+++ b/_config.yml
@@ -52,3 +52,8 @@ plugins:
   - jekyll-remote-theme
 staging: https://pa-bukitcanberra-staging.netlify.app
 prod: https://pa-bukitcanberra-prod.netlify.app
+shareicon: /images/isomer-logo.svg
+is_government: false
+facebook-pixel: ""
+google_analytics: ""
+linkedin-insights: ""
