--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -13,6 +13,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Gardens Give Back.md
+      - Caring for Our Community/Befriender Programme (C).md
       - Caring for Our Community/.keep
       - Caring for Our Community/Befrienders for the Elderly.md
       - Caring for Our Community/Food from the Heart.md
