--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Caring for Our Community/Befrienders for the Elderly.md
       - Caring for Our Community/Food from the Heart.md
       - Caring for Our Community/Sewing Community Initiative.md
-      - Caring for Our Community/Hair Grooming or Cutting Services.md
+      - Caring for Our Community/Programme Curators.md
       - Caring for Our Community/NKF Volunteers.md
       - Caring for Our Community/Volunteer Storytellers.md
       - Caring for Our Community/Hawkers Day.md
