--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -18,7 +18,8 @@ collections:
       - Caring for Our Community/Food from the Heart.md
       - Caring for Our Community/Sewing Community Initiative.md
       - Caring for Our Community/Programme Curators.md
-      - Caring for Our Community/NKF Volunteers.md
+      - Caring for Our Community/National Kidney Foundation (NKF) Volunteer
+        Programme at Dialysis Centre.md
       - Caring for Our Community/Volunteer Storytellers.md
       - Caring for Our Community/Hawkers Day.md
       - Caring for Our Community/Befriender Programme (C).md
