--- a/_unwanted/collection.yml
+++ b/_unwanted/collection.yml
@@ -2,5 +2,6 @@ collections:
   unwanted:
     output: true
     order:
+      - Monthly Birthday Celebration for Residents.md
       - Befriender Programme.md
       - Befriender Programme (C).md
