--- a/_unwanted/collection.yml
+++ b/_unwanted/collection.yml
@@ -2,6 +2,7 @@ collections:
   unwanted:
     output: true
     order:
+      - Medical Escort.md
       - Food from the Heart Distribution Programme.md
       - Monthly Birthday Celebration for Residents.md
       - Befriender Programme.md
