--- a/_unwanted/collection.yml
+++ b/_unwanted/collection.yml
@@ -2,6 +2,7 @@ collections:
   unwanted:
     output: true
     order:
+      - Virtual Programme Coordinator.md
       - Online Befriender Programme.md
       - Medical Escort.md
       - Food from the Heart Distribution Programme.md
