--- a/_unwanted/collection.yml
+++ b/_unwanted/collection.yml
@@ -2,6 +2,7 @@ collections:
   unwanted:
     output: true
     order:
+      - SPARKS Vision.md
       - Language Classes for Foreign Care Staff.md
       - Virtual Programme Coordinator.md
       - Online Befriender Programme.md
