--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,6 @@ collections:
   about-us:
     output: true
     order:
-      - SPARKS Mission.md
+      - SPARKS Mission & Vision.md
       - Our Success Stories.md
       - Marketing Video.md
