--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Volunteer Programmes.md
+      - Nurturing Our Children/KidsREAD Club Programme.md
       - Nurturing Our Children/.keep
       - Nurturing Our Children/Community Tuition Programme.md
       - Nurturing Our Children/It's Storytime.md
