--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -8,6 +8,7 @@ collections:
       - Nurturing Our Children/It's Storytime.md
       - Nurturing Our Children/KidsREAD Club Programme.md
       - Nurturing Our Children/Tuition For The Deaf.md
+      - Arts & Heritage/ARTS2.md
       - Arts & Heritage/Arts.md
       - Arts & Heritage/.keep
       - Arts & Heritage/Sembawang Heritage Ambassadors.md
