--- a/_archive/collection.yml
+++ b/_archive/collection.yml
@@ -2,6 +2,7 @@ collections:
   archive:
     output: true
     order:
+      - Test Archive.md
       - SPARKS Vision.md
       - Language Classes for Foreign Care Staff.md
       - Virtual Programme Coordinator.md
