--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -16,7 +16,7 @@ collections:
       - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Gardens Give Back.md
       - Caring for Our Community/.keep
-      - Caring for Our Community/Befrienders for the Elderly.md
+      - Caring for Our Community/Befriending the Elderly.md
       - Caring for Our Community/Food from the Heart.md
       - Caring for Our Community/Sewing Community Initiative.md
       - Caring for Our Community/Programme Curators.md
