--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Gardens Give Back.md
+      - Caring for Our Community/Home Visit to Socially Vulnerable Seniors.md
       - Caring for Our Community/.keep
       - Caring for Our Community/Befriending the Elderly.md
       - Caring for Our Community/Food from the Heart.md
