--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -26,6 +26,7 @@ collections:
       - Caring for Our Community/Volunteer Storytellers.md
       - Caring for Our Community/Hawkers Day.md
       - Caring for Our Community/Refreshment IC.md
+      - Health & Wellness/Exercise Facilitator.md
       - Health & Wellness/.keep
       - Health & Wellness/Virtual Zumba or Exercise Instructors.md
       - Health & Wellness/Activity Pack Designers.md
