--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Volunteer Programmes.md
       - Nurturing Our Children/.keep
-      - Nurturing Our Children/Community Tuition Programme.md
+      - Nurturing Our Children/Project Little Einstein.md
       - Nurturing Our Children/It's Storytime.md
       - Nurturing Our Children/KidsREAD Club Programme.md
       - Nurturing Our Children/Tuition For The Deaf.md
