--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -18,7 +18,7 @@ collections:
       - Caring for Our Community/.keep
       - Caring for Our Community/Befriending the Elderly.md
       - Caring for Our Community/Food from the Heart.md
-      - Caring for Our Community/Sewing Community Initiative.md
+      - Caring for Our Community/Sowers' Community Initiative.md
       - Caring for Our Community/Programme Curators.md
       - Caring for Our Community/National Kidney Foundation (NKF) Volunteer
         Programme at Dialysis Centre.md
