chore(Amplify-Migration): Update permalinks in files

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ links:
   - title: Volunteer Programmes
     collection: volunteer-programmes
   - title: Join Us
-    url: /Join-Us
+    url: /join-us
   - title: Our Facilities
     url: /our-facilities
   - title: Our Location
