{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"264"}

--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -21,7 +21,8 @@ collections:
       - Caring for Our Community/Programme Curators.md
       - Caring for Our Community/National Kidney Foundation (NKF) Volunteer
         Programme at Dialysis Centre.md
-      - Caring for Our Community/Volunteer Storytellers.md
+      - Caring for Our Community/Resident Monthly Birthday Celebrations (Program
+        Coordinators).md
       - Caring for Our Community/Hawkers Day.md
       - Caring for Our Community/Refreshment IC.md
       - Caring for Our Community/Home Visit to Socially Vulnerable Seniors.md
