{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"264"}

--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Going Green Together/.keep
       - Going Green Together/Beach Cleaning & Environment Group.md
       - Going Green Together/Gardens Give Back.md
+      - Caring for Our Community/Meal Preparation Assistants.md
       - Caring for Our Community/.keep
       - Caring for Our Community/Befriending the Elderly.md
       - Caring for Our Community/Sowers' Community Initiative.md
