{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"139"}

--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Volunteer Programmes.md
       - Nurturing Our Children/.keep
-      - Nurturing Our Children/Project Little Einstein.md
+      - Nurturing Our Children/Homework Cafe.md
       - Nurturing Our Children/It's Storytime.md
       - Nurturing Our Children/Tuition For The Deaf.md
       - Arts & Heritage/.keep
