{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"139"}

--- a/_volunteer-programmes/collection.yml
+++ b/_volunteer-programmes/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Caring for Our Community/Befriending the Elderly.md
       - Caring for Our Community/Sowers' Community Initiative.md
       - Caring for Our Community/Programme Curators.md
-      - Caring for Our Community/Refreshment IC.md
+      - Caring for Our Community/Kitchen Volunteer.md
       - Health & Wellness/.keep
       - Health & Wellness/Exercise Facilitator.md
       - Smart Nation/.keep
